lua/examples/lua-test-suite/IntelliJ-Luanalysis/src/test/resources/inspections/snippet.lua.fail
---@param level number | `Logger.ERROR` | `Logger.WARNING` | `Logger.INFO` | `Logger.DEBUG` | `Logger.VERBOSE`
local function setLogLevel(level)
    ---@type number
    local logLevel = level

    ---@type string
    local aString = <error descr="Type mismatch. Required: 'string' Found: 'Logger.DEBUG | Logger.ERROR | Logger.INFO | Logger.VERBOSE | Logger.WARNING | number'">level</error>
end
